# mlbb_drafter

./: .gitignore  MLBB_DRAFTER_GUIDE.md  Need to mention.md  PRODUCTION_GUIDE.md  README.md  pyproject.toml  requirements.txt
server/: config.py  main.py
server/capture/: __init__.py  adb_capture.py
server/data/: __init__.py  loader.py  scraper.py  tournament_loader.py
server/detection/: __init__.py  dummy_detector.py  yolo_detector.py
server/recommendation/: __init__.py  draft_state.py  gcn_model.py  gcn_model_v2.py  scoring.py  scoring_data.py
server/websocket/: server.py
shared/: constants.py  hero_meta.json
tests/: test_capture.py  test_countered_by.py  test_data_corrections.py  test_detection.py  test_integration.py  test_locked_lanes.py  test_recommendation.py  test_scoring.py  test_scoring_data.py  test_scraper.py  test_tournament_loader.py  test_trait_scoring.py  test_websocket.py  test_yolo_detector.py
training/: DATA_SOURCES.md  add_lane_data.py  add_temporal_features.py  backup_data.py  build_counter_data.py  capture_screenshots.py  convert_additional_datasets.py  convert_liquipedia_data.py  create_final_training_data.py  dataset.yaml  fetch_all_data.py  fetch_hero_stats_api.py  fetch_kaggle_datasets.py  fetch_liquipedia.py  fetch_mlbb_io.py  fetch_openmlbb_full.py  generate_images.py  generate_synthetic.py  process_api_data.py  process_drive_data.py  train_gcn.py  train_gcn_enhanced.py  train_yolo.py
training/data/: adjacency_matrix.pt  adjacency_real.json  gcn_model_v2.pt  synthetic_drafts.csv
web_dashboard/: app.js  index.html  style.css
(+10 files in other folders)
