[project]
name = "mlbb-drafter"
version = "0.1.0"
description = "Real-time MLBB drafting assistant"
requires-python = ">=3.10"
dependencies = [
    "opencv-python>=4.8.0",
    "ultralytics>=8.0.0",
    "torch>=2.0.0",
    "websockets>=12.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "numpy>=1.24.0",
    "pillow>=10.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]
